--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "feather-icons-react": "^0.7.0",
     "json": "^11.0.0",
+    "prettier": "^3.5.3",
     "storybook": "^8.6.4",
     "storybook-addon-tags": "^0.0.1",
     "typescript": "^5.2.2",
